--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.jpeg"
   },
   "dependencies": {
-    "@vite-pwa/assets-generator": "^0.2.6",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-label": "^2.1.1",
@@ -19,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.3",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,7 +28,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -45,7 +46,6 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "vite": "^6.0.1",
-    "vite-plugin-pwa": "^0.20.5"
+    "vite": "^6.0.1"
   }
 }
