--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://u22099.github.io/webcodeeditor",
+  "homepage": "https://u22099.github.io/WebCodeEditor",
   "name": "webcodeeditor",
   "private": true,
   "version": "0.0.0",
