--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,37 +20,37 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
-    "@vite-pwa/assets-generator": "^0.2.6",
     "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
-    "lucide-react": "^0.469.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-pwa": "^0.21.1"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
 
-  "devDependencies": {
+  "devDependencies": {  
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "framer-motion": "^11.15.0",
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
+    "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "tailwind-merge": "^2.5.5",
     "vite": "^6.0.7",
-    "vite-plugin-inspect": "^0.10.6"
+    "vite-plugin-inspect": "^0.10.6",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
