--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "preview": "vite preview",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.jpeg"
   },
-
   "dependencies": {
     "@monaco-editor/react": "^4.7.0-rc.0",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
@@ -24,12 +26,9 @@
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "react-icons": "^5.4.0"
   },
-
-  "devDependencies": {  
+  "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
@@ -48,7 +47,9 @@
     "globals": "^15.14.0",
     "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.0.7",
     "vite-plugin-inspect": "^0.10.6",
     "vite-plugin-pwa": "^0.21.1"
