--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "globals": "^15.14.0",
     "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
+    "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
